--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "Screen_Broadcasting"]
 	path = Screen_Broadcasting
 	url = https://github.com/thisalihassan/MOOC_screen_broadcast
+[submodule "audio_multi_peer"]
+	path = audio_multi_peer
+	url = https://github.com/thisalihassan/MOOC_audio_call
