--- a/.gitmodules
+++ b/.gitmodules
@@ -1,8 +1,8 @@
 [submodule "MOOC_Backend"]
 	path = MOOC_Backend
 	url = https://github.com/thisalihassan/back-end-mooc
-[submodule "New folder (3)/clientStart"]
-	path = New folder (3)/clientStart
+[submodule "MOOC_Frontend/clientStart"]
+	path = MOOC_Frontend/clientStart
 	url = https://github.com/thisalihassan/mooc-front-end
 [submodule "Screen_Broadcasting"]
 	path = Screen_Broadcasting
